<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".AboutMeActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_developer"
                android:textColor="@color/textTitle"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_developer_name"
                android:textColor="@color/textBody"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_email"
                android:textColor="@color/textTitle"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email_address"
                android:textColor="@color/textBody"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_mobile"
                android:textColor="@color/textTitle"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_number"
                android:textColor="@color/textBody"
                android:layout_weight="1"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/btn_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_privacy_policy"
                android:textColor="@color/textTitle"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_arrow"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:maxHeight="20dp"
                android:maxWidth="25dp"
                android:scaleType="fitEnd"
                android:layout_gravity="right"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>
</LinearLayout>