<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/text_list_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/bg_list_title"/>


    </FrameLayout>

    <TextView
        android:id="@+id/text_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/layout_memo_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/edit_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_border_gray"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/btn_add"
            android:textColor="@drawable/btn_pink_text_selector" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="top">

        <Button
            android:id="@+id/btn_add_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/btn_add_memo"
            android:layout_gravity="left"
            android:textColor="@drawable/btn_pink_text_selector" />


        <Button
            android:id="@+id/btn_cover_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/btn_cover_image"
            android:layout_gravity="right"
            android:textColor="@drawable/btn_pink_text_selector" />
<!--
        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:maxWidth="32dp"
            android:maxHeight="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_more" />-->
    </FrameLayout>
</LinearLayout>
