<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".CreateTravelActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:textColor="@drawable/btn_pink_text_selector"
            android:text="@string/btn_cancel"
            android:background="@color/transparency"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textTitle"
            android:layout_gravity="center|center_vertical"
            android:textSize="16sp"
            android:text="@string/btn_create_travel"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:textColor="@drawable/btn_pink_text_selector"
            android:text="@string/btn_save"
            android:background="@color/transparency"/>
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/underline">

                <EditText
                    android:id="@+id/edit_travel_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/textPink"
                    android:singleLine="true"
                    android:maxLength="100"
                    android:hint="@string/hint_travel_name"
                    android:background="@color/transparency"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center|center_vertical"/>

                <ImageButton
                    android:id="@+id/btn_remove_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_trashcan"
                    android:adjustViewBounds="true"
                    android:background="#00000000"
                    android:maxHeight="30dp"
                    android:maxWidth="37dp"
                    android:scaleType="fitCenter"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/layout_startDt"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="START"
                        android:textColor="@color/textBody"
                        android:textSize="16sp"
                        android:layout_gravity="left|center_vertical"/>

                    <TextView
                        android:id="@+id/text_startDt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/textPink"
                        android:textSize="16sp"
                        android:layout_gravity="right|center_vertical"/>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_endDt"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@color/gray_light">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="END"
                        android:textColor="@color/textBody"
                        android:textSize="16sp"
                        android:layout_gravity="left|center_vertical"/>

                    <TextView
                        android:id="@+id/text_endDt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/textPink"
                        android:textSize="16sp"
                        android:layout_gravity="right|center_vertical"/>
                </FrameLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_plus_pink"
                    android:layout_gravity="center|center_vertical"/>
                <Button
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_photos"
                    android:layout_gravity="center|center_vertical"
                    android:background="@color/transparency"
                    android:textColor="@drawable/btn_pink_text_selector"/>

            </LinearLayout>

            <!-- Photos -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/viewEditRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <!--// Photos -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>